exports[`undersight getTopScores should calculate score for four enemy 1`] = `
Array [
  Object {
    "score": 4,
    "you": "Soldier: 76"
  },
  Object {
    "score": 4,
    "you": "Reaper"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopScores should calculate score for one enemy 1`] = `
Array [
  Object {
    "score": 1,
    "you": "Soldier: 76"
  },
  Object {
    "score": 1,
    "you": "Reaper"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopScores should calculate scores 1`] = `
Array [
  Object {
    "score": 3,
    "you": "Soldier: 76"
  },
  Object {
    "score": 3,
    "you": "Reaper"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopScores should calculate scores 2`] = `
Array [
  Object {
    "score": 3,
    "you": "Pharah"
  },
  Object {
    "score": 0,
    "you": "Soldier: 76"
  },
  Object {
    "score": 0,
    "you": "Reaper"
  }
]
`;

exports[`undersight getTopScores should calculate scores 3`] = `
Array [
  Object {
    "score": 3,
    "you": "Reaper"
  },
  Object {
    "score": 0,
    "you": "Soldier: 76"
  },
  Object {
    "score": -3,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopScores should calculate scores 4`] = `
Array [
  Object {
    "score": 2,
    "you": "Reaper"
  },
  Object {
    "score": 1,
    "you": "Soldier: 76"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopScores should calculate scores 5`] = `
Array [
  Object {
    "score": 2,
    "you": "Reaper"
  },
  Object {
    "score": 1,
    "you": "Soldier: 76"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopThree should get the top three counters to a team 1`] = `
Array [
  Object {
    "score": 3,
    "you": "Soldier: 76"
  },
  Object {
    "score": 3,
    "you": "Reaper"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopThree should get the top three counters to a team 2`] = `
Array [
  Object {
    "score": 3,
    "you": "Pharah"
  },
  Object {
    "score": 0,
    "you": "Soldier: 76"
  },
  Object {
    "score": 0,
    "you": "Reaper"
  }
]
`;

exports[`undersight getTopThree should get the top three counters to a team 3`] = `
Array [
  Object {
    "score": 3,
    "you": "Reaper"
  },
  Object {
    "score": 0,
    "you": "Soldier: 76"
  },
  Object {
    "score": -3,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopThree should get the top three counters to a team 4`] = `
Array [
  Object {
    "score": 2,
    "you": "Reaper"
  },
  Object {
    "score": 1,
    "you": "Soldier: 76"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;

exports[`undersight getTopThree should get the top three counters to a team 5`] = `
Array [
  Object {
    "score": 2,
    "you": "Reaper"
  },
  Object {
    "score": 1,
    "you": "Soldier: 76"
  },
  Object {
    "score": 0,
    "you": "Pharah"
  }
]
`;
